# DjangoWiz

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
DjangoWiz/: generate.py
DjangoWiz/templates/: routes.py.j2  serializer.py.j2
djangowiz/: app.py  cli.py  core.py  generate.py
djangowiz/core/: __init__.py  base_generator.py  io_handler.py  model_extractor.py  project_generator.py  project_io_handler.py
djangowiz/repo/: generators.yaml
djangowiz/repo/generators/: __init__.py  admin_generator.py  serializer_generator.py  test_generator.py  viewset_generator.py
djangowiz/repo/templates/: Dockerfile.j2  test.py.j2
djangowiz/repo/templates/multi/: admin.py.j2  tests.py.js
djangowiz/repo/templates/single/: admin.py.j2  serializers.py.j2  tests.py.j2  viewsets.py.j2
djangowiz/repo/templates/test.py/: j2
djangowiz/templates/: docker-compose.prod.yml.j2  env.dev.j2  env.prod.j2  viewset.py.j2
djangowiz/templates/multi/: serializers.py.j2  viewsets.py.j2
djangowiz/test/tests/: test_buyable.py  test_buyabletype.py  test_property.py  test_timestampmixin.py
djangowiz/tests/: models.py
djangowiz/tests/test_app/: serializers.py
templates/: docker-compose.dev.yml.j2  serializer.py.j2  urls.py.j2  viewset.py.j2
